ffi/derive/tests/ui_fail/fallible_transmute_mut_ref.stderr
error[E0277]: the trait bound `Wrapper: InfallibleTransmute` is not satisfied
  --> tests/ui_fail/fallible_transmute_mut_ref.rs:21:1
   |
21 | #[ffi_export]
   | ^^^^^^^^^^^^^ the trait `InfallibleTransmute` is not implemented for `Wrapper`
   |
   = help: the following other types implement trait `InfallibleTransmute`:
             i8
             i16
             i32
             i64
             u8
             u16
             u32
             u64
           and $N others
   = note: required for `&mut Wrapper` to implement `Ir`
   = note: required for `&mut Wrapper` to implement `FfiType`
   = note: this error originates in the attribute macro `ffi_export` (in Nightly builds, run with -Z macro-backtrace for more info)
